# sharesansar-api

./: .gitignore  LICENSE  MANIFEST.in  README.md  USAGE.md  publish_to_pypi.sh  pyproject.toml  requirements.txt  setup.py  test_build.py  test_historical_data.py
examples/: demo.py
src/sharesansar/: __init__.py  api.py  models.py  scraper.py  utils.py
tests/: test.py
