[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharesansar-api"
version = "0.3.0"
authors = [
    {name = "Paul Hembrom", email = "hembrompaulus192@gmail.com"},
]
description = "AnAPI for Nepali stock data from ShareSansar for NEPSE Market"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
keywords = ["nepal", "stocks", "sharesansar", "finance", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/Paul-hembrom/sharesansar-api"
"Bug Reports" = "https://github.com/Paul-hembrom/sharesansar-api/issues"